cmake_minimum_required(VERSION 3.25)
project(Systemes C)

set(CMAKE_C_STANDARD 11)

add_executable(Systemes main.c "Exercice_05.c" "Exercice_07.c" "Exercice_08.c" Exercice_09.c Exercice_10.c Exercice_11.c Exercice_13/pair.c Exercice_13/pair.h Exercice_13/impair.c Exercice_13/impair.h Exercice_13/spair.c Exercice_13/ppair.c Exercice_13/ppair.h)
